Fix links not using dark mode color

--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -21,6 +21,11 @@
   a {
     color: var(--type-magenta-dark);
     text-decoration-color: var(--type-magenta-dark);
+
+    .dark-theme & {
+      color: var(--type-magenta);
+      text-decoration-color: var(--type-magenta);
+    }
   }
 
   a.button-link {
